--- a/_config.yml
+++ b/_config.yml
@@ -245,6 +245,9 @@ category_archive:
 tag_archive:
   type: liquid
   path: /tags/
+about:
+  type: default
+  path : /about/
 # https://github.com/jekyll/jekyll-archives
 # jekyll-archives:
 #   enabled:
