--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,10 @@
 main:
   - title: "about"
-  - url: /about/
+    url: /about/
   - title: "Posts by Tags"
-  - url : /tags/
+    url : /tags/
   - title: "Posts by Categories"
-  - url: /categories/
+    url: /categories/
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
   #   url: /year-archive/
